diamond_demo/hw/TDC_headers/tdcbase.h


typedef enum {
  DEVTYPE_1A,                    
  DEVTYPE_1B,                    
  DEVTYPE_1C,                    
  DEVTYPE_NONE                   
} TDC_DevType;
typedef enum {
  FORMAT_ASCII,                  
  FORMAT_BINARY,                 
  FORMAT_COMPRESSED,             
  FORMAT_NONE                    
} TDC_FileFormat;
typedef enum {
  SCOND_TTL,                     
  SCOND_LVTTL,                   
  SCOND_NIM,                     
  SCOND_MISC,                    
  SCOND_NONE                     
} TDC_SignalCond;
typedef enum {
  SIM_FLAT,                      
  SIM_NORMAL,                    
  SIM_NONE                       
} TDC_SimType;
TDC_API double TDC_CC TDC_getVersion();
TDC_API const char * TDC_CC TDC_perror( int rc );
TDC_API double TDC_CC TDC_getTimebase();
TDC_API int TDC_CC TDC_init( int deviceId );
TDC_API int TDC_CC TDC_deInit();
TDC_API TDC_DevType TDC_CC TDC_getDevType();
TDC_API Bln32 TDC_CC TDC_checkFeatureHbt();
TDC_API Bln32 TDC_CC TDC_checkFeatureLifeTime();
TDC_API int TDC_CC TDC_configureSignalConditioning( Int32          channel,
                                                    TDC_SignalCond conditioning,
                                                    Bln32          edge,
                                                    Bln32          term,
                                                    double         threshold );
TDC_API int TDC_CC TDC_configureSyncDivider( Int32 divider, Bln32 reconstruct );
TDC_API int TDC_CC TDC_configureApdCooling( Int32 fanSpeed, Int32 temp );
TDC_API int TDC_CC TDC_configureInternalApds( Int32  apd,
                                              double bias,
                                              double thrsh );
TDC_API int TDC_CC TDC_enableChannels( Int32 channelMask );
TDC_API int TDC_CC TDC_setChannelDelays( const Int32 * delays );
TDC_API int TDC_CC TDC_setCoincidenceWindow( Int32 coincWin );
TDC_API int TDC_CC TDC_setExposureTime( Int32 expTime );
TDC_API int TDC_CC TDC_getDeviceParams( Int32 * channelMask,
                                        Int32 * coincWin,
                                        Int32 * expTime   );
TDC_API int TDC_CC TDC_switchTermination( Bln32 on );
TDC_API int TDC_CC TDC_configureSelftest( Int32 channelMask,
                                          Int32 period,
                                          Int32 burstSize,
                                          Int32 burstDist );
TDC_API int TDC_CC TDC_getDataLost( Bln32 * lost );
TDC_API int TDC_CC TDC_setTimestampBufferSize( Int32 size );
TDC_API int TDC_CC TDC_freezeBuffers( Bln32 freeze );
TDC_API int TDC_CC TDC_getCoincCounters( Int32 * data, Int32 * updates );
TDC_API int TDC_CC TDC_getLastTimestamps( Bln32   reset,
                                          Int64 * timestamps,
                                          Int8  * channels,
                                          Int32 * valid );
TDC_API int TDC_CC TDC_writeTimestamps( const char *   filename,
                                        TDC_FileFormat format );
TDC_API int TDC_CC TDC_inputTimestamps( const Int64 * timestamps,
                                        const Int8  * channels,
                                        Int32         count );
TDC_API int TDC_CC TDC_readTimestamps( const char *   filename,
                                       TDC_FileFormat format );
TDC_API int TDC_CC TDC_generateTimestamps( TDC_SimType type,
                                           double *    par,
                                           Int32       count );